# Meta-Hackathon

./: .gitignore
git_conflict_env/: .dockerignore  .env  .gitignore  .hf-upload-ignore  Dockerfile  README.md  TESTING.md  __init__.py  baseline.py  client.py  conflict_generator.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  validate-submission.sh
git_conflict_env/.venv_windows_backup/: pyvenv.cfg
git_conflict_env/.venv_windows_backup/Scripts/: activate
git_conflict_env/git_conflict_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
git_conflict_env/server/: Dockerfile  __init__.py  app.py  git_conflict_environment.py
git_conflict_env/tasks/: task_easy.json  task_hard.json  task_medium.json
git_conflict_env/tests/: test_env.py  test_graders.py
